tinyc/test/bad/array-void.c
int main()
{
    void x[ 2 ];

    return 0;
}

